Added repository to package info

--- a/package.json
+++ b/package.json
@@ -1,6 +1,10 @@
 {
   "name": "pop-meter",
   "main": "server.js",
+  "repository": {
+	"type": "git",
+	"url": "https://github.com/Joeento/pop-meter.git"
+  }
   "dependencies": {
     "express": "~4.0.0",
     "body-parser": "~1.0.1",
