--- a/bower.json
+++ b/bower.json
@@ -3,6 +3,7 @@
   "version": "1.0.0",
   "dependencies": {
     "bootstrap": "latest",
+    "bootstrap-social": "latest",
     "font-awesome": "latest",
     "animate.css": "latest",
     "jquery": "latest"
