--- a/package.json
+++ b/package.json
@@ -7,6 +7,7 @@
   },
   "dependencies": {
     "express": "~4.0.0",
+    "bunyan": "1.2.3",
     "body-parser": "~1.0.1",
     "ejs": "^1.0.0",
     "fb": "~0.7.0"
